<resources>
    <string name="app_name">NoQueue</string>
    <string name="title_activity_launch">NoQueue</string>
    <string name="screen_qdetails">Token Details</string>
    <string name="screen_invite">Invite</string>
    <string name="screen_review">Review</string>
    <string name="screen_notification">Notifications</string>
    <string name="screen_legal">Legal</string>
    <string name="screen_invite_details">Invite Details</string>
    <string name="screen_join">Get Token</string>
    <string name="screen_search">Search</string>
    <string name="screen_profile">Profile</string>
    <string name="screen_edit_profile">Edit Profile</string>
    <string name="medical_profile">Medical Profile</string>
    <string name="medical_profiles">Medical Profiles</string>
    <string name="screen_view_all">View All</string>
    <string name="screen_upcoming_appointment">Appointments</string>
    <string name="action_settings">Settings</string>
    <string name="join">Click to get token</string>
    <string name="view_token_status">View Token Status</string>
    <string name="login_to_join">Login to Join</string>
    <string name="cancel">Cancel</string>
    <string name="quit_queue">Cancel Your Token</string>
    <string name="go_back">Go Back</string>
    <string name="ratetheapp">Rate the app</string>
    <string name="legal">Legal</string>
    <string name="invite">Invite</string>
    <string name="firstname">First Name</string>
    <string name="how_it_works">How it works?</string>
    <string name="your_invite_code">Your Invite Code</string>
    <string name="copy">Copy</string>
    <string name="send_invite">Send Invites</string>
    <string name="empty_invite_code">Please login to have invite code to share.</string>
    <string name="empty_history">You don\'t have any \n recent history.</string>
    <string name="close">Close</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="term_condition">Terms &amp; Conditions</string>
    <string name="about_us">About us</string>
    <string name="version_no">App version: %1$s</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="phone">Phone <font color='red'>\u002A</font></string>
    <string name="name">Name <font color='red'>\u002A</font></string>
    <string name="mail">Mail</string>
    <string name="birthday">Birthday <font color='red'>\u002A</font></string>
    <string name="gender">Gender <font color='red'>\u002A</font></string>
    <string name="invitecode">Invite code</string>
    <string name="btnregister">Continue Register</string>
    <string name="error_name_blank">Please enter name</string>
    <string name="error_email_blank">Please enter email</string>
    <string name="error_name_length">Name length should be at least 3 or higher</string>
    <string name="error_invalid_email">Please enter valid email</string>
    <string name="error_invalid_date">Please select a valid date</string>
    <string name="error_dob_blank">Please enter date of birth</string>
    <string name="error_dob_format">Please enter date of birth in yyyy-MM-dd format</string>
    <string name="networkerror">Network Error</string>
    <string name="offline">Network unavailable. Please connect your device to network.</string>
    <string name="serving_now">Now Serving</string>
    <string name="your_token">Token</string>
    <string name="your_order">Order</string>
    <string name="position_in_queue_label">Your position in queue</string>
    <string name="position_in_queue">Position in queue: %1$d</string>
    <string name="your_are_next_label">You are next!</string>
    <string name="daily_token_limit">Daily token limit: %1$s</string>
    <string name="estimated_wait">Estimated Wait: %1$s</string>
    <string name="expected_service_around">Expected Service: %1$s</string>
    <string name="serving_now_in_queue">Serving now: %1$s</string>
    <string name="serving_not_started">Serving: %1$s</string>
    <string name="revisit_restriction">Repeat service restriction: %1$s</string>
    <string name="referral_code_required">One time identification code required to get token</string>
    <string name="currently_serving">Currently serving</string>
    <string name="token_available">Token available</string>
    <string name="tokens_available">Tokens available</string>
    <string name="person_in_queue">Person in queue</string>
    <string name="people_in_queue">People in queue</string>
    <string name="cancel_queue">You have successfully cancelled</string>
    <string name="fail_to_cancel">Failed to cancel</string>
    <string name="cancel_order">You have successfully cancelled the order</string>
    <string name="fail_to_cancel_order">Failed to cancel the order</string>
    <string name="radio_save_30min">0</string>
    <string name="radio_save_1hr">1</string>
    <string name="radio_save_2hr">2</string>
    <string name="radio_save_3hr">3</string>
    <string name="radio_save_4hr">4</string>
    <string name="submit">Add Review</string>
    <string name="radio_save_30min_f">30 minutes </string>
    <string name="radio_save_1hr_f">1 hour </string>
    <string name="radio_save_2hr_f">2 hours </string>
    <string name="radio_save_3hr_f">3 hours </string>
    <string name="radio_save_4hr_f">4 hours </string>
    <string name="time_saved">Time saved:&#160;</string>
    <string name="ok">OK</string>
    <string name="exit_app">Press back again to exit</string>
    <string name="app_missing">No app to share invitation</string>
    <string name="select_country">Select Country</string>
    <string name="logout">Logout</string>
    <string name="login_register">Login / Register</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_msg">Data created when not logged in could be lost forever</string>
    <string name="error_mobile_blank">Please enter phone number</string>
    <string name="error_login">Please login to remote join</string>
    <string name="error_rateservice">Please rate the service</string>
    <string name="review_thanks">Thanks for feedback.</string>
    <string name="error_timesaved">Please provide how many no. of hour(s) you saved.</string>
    <string name="error_qrcode_scan">Not a valid NoQueue QR Code</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_too_many_request">Exceeded OTP request limit</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">Enter OTP</string>
    <string name="store_hour">Hours:</string>
    <string name="store_today_hour">Today:</string>
    <string name="store_closed">Closed Today</string>
    <string name="error_prevent_joining">%1$s %2$s is no longer accepting new token for the day</string>
    <string name="error_day_closed">%1$s %2$s is closed for the day</string>
    <string name="error_token_available_from">%1$s %2$s will start issuing new token after %3$s. Please try again after %3$s.</string>
    <string name="error_token_not_available_from">%1$s %2$s is closing for the day soon. Hence no new tokens would be available.</string>
    <string name="error_business_closed_permanent">%1$s %2$s is closed permanently</string>
    <string name="error_business_has_closed_for_the_day">%1$s %2$s has closed for the day</string>
    <string name="error_user_needs_to_be_logged_in">Please login to join %1$s %2$s</string>
    <string name="error_reached_daily_limit">All tokens for this queue has been acquired for the day.</string>
    <string name="text_time_saved">How much time did you save?</string>
    <string name="authentication_fail_title">Authentication failure</string>
    <string name="authentication_fail_msg">Please login again.</string>
    <string name="barcode_error">Queue not found</string>
    <string name="barcode_error_msg">No merchant is associated with this NoQueue code</string>
    <string name="copy_right">Website: https://noqapp.com\n\n NoQueue &#174; is a trademark of NoQueue Inc.\n 2021 \u00a9 NoQueue Inc</string>
    <string name="alert">Alert</string>
    <string name="wait_time">Wait time</string>
    <string name="wait_time_formatted">Wait time: %1$s</string>
    <string name="wait_time_formatted_newline">\nWait time: %1$s</string>
    <string name="time_slot">Visit</string>
    <string name="time_slot_formatted">Time slot: %1$s</string>
    <string name="time_slot_formatted_newline">\nTime slot: %1$s</string>
    <string name="error_remote_join_not_available">Remote join not allowed. Please visit the store.</string>
    <string name="error_join">Remote Join Not Enabled</string>
    <string name="login_hint">Phone no. without country code</string>
    <string name="bullet">\u27A3</string>
    <string name="circle_large_bullet">\u2B24</string>
    <string name="circle_small_bullet">\u2022</string>
    <string name="horizontal_ellipsis">\u2026</string>
    <string name="triangular_bullet">\u2023</string>
    <string name="right_pointing_angle_quotation">\u203A</string>
    <string name="asterisk">\u002A</string>
    <string name="btn_playstore">Open Play Store</string>
    <string name="playstore_update_title">Newer App Version Available</string>
    <string name="playstore_update_msg">New version of NoQueue is available on play store. Please update your app to latest version.\n</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="msg_default_status">Place NoQueue QR Code inside the viewfinder rectangle to scan it.</string>
    <string name="notification_alert">You haven\'t receive any notification yet :(.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="medical_history">Past Doctor Visits</string>
    <string name="txt_appointments">Appointments</string>
    <string name="medical_history_details">Case History</string>
    <string name="weekly_hours">Weekly Hours</string>
    <string name="prompt_email">Email</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_marital_status">marital status</string>
    <string name="action_update">Update Profile</string>
    <string name="language_setting">Change Language</string>
    <string name="lang_dialog_title">Change Language</string>
    <string name="hindi">हिंदी</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="english">English</string>
    <string name="current_location">Current location</string>
    <string name="scan_qr">SCAN QR</string>
    <string name="active_token">Active Token</string>
    <string name="health_care">Hospitals</string>
    <string name="transaction_history">Transactions</string>
    <string name="email_hint">Please enter email ID</string>
    <string name="otp">Enter OTP</string>
    <string name="validate_via_otp">Validate email via OTP</string>
    <string name="favourite">Favourite</string>
    <string name="check_your_email">Please check your email to get the OTP</string>
    <string name="txt_title">Title</string>
    <string name="txt_description">Description</string>
    <string name="txt_next">Next</string>
</resources>