<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_medical"
            android:icon="@drawable/medical_history"
            android:title="@string/medical_history" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/transaction"
            android:title="@string/transaction_history" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/invite"
            android:title="@string/invite" />
        <item
            android:id="@+id/nav_legal"
            android:icon="@drawable/legal"
            android:title="@string/legal" />
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/ic_star"
            android:title="@string/ratetheapp" />

        <item
            android:id="@+id/nav_app_setting"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_change_language"
            android:icon="@drawable/language"
            android:title="@string/language_setting" />
    </group>


</menu>
