<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuHome"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/menuSearch"
        android:title="@string/screen_search"
        android:icon="@drawable/feather_search"/>

<!--    <item android:id="@+id/menuPost"-->
<!--        android:title="@string/txt_post"-->
<!--        android:icon="@drawable/ic_baseline_add_circle_outline_24"/>-->

    <item android:id="@+id/menuFavourite"
        android:title="@string/favourite"
        android:icon="@drawable/material_favorite_border"/>

    <item android:id="@+id/menuNotification"
        android:title="@string/screen_notification"
        android:icon="@drawable/metro_notification"/>

</menu>