<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register"
        android:textColor="@color/colorActionbar"
        android:textSize="20sp" />

    <TextView
        style="@style/style_register_tv"
        android:text="@string/phone" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <EditText
            android:id="@+id/edt_country_code"
            style="@style/style_register_edt"
            android:layout_width="0dp"
            android:padding="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/transparent"
            android:layout_marginRight="5dp"
            android:focusable="false"
            />
        <EditText
            android:id="@+id/edt_phone"
            style="@style/style_register_edt"
            android:layout_width="0dp"
            android:layout_weight=".80"
            android:inputType="phone"
            android:maxLength="15" />

    </LinearLayout>
    <!--android:hint="@string/phonerequired" -->

    <TextView
        style="@style/style_register_tv"
        android:text="@string/name" />


    <EditText
        android:id="@+id/edt_name"
        style="@style/style_register_edt"
        android:inputType="text"

        />
    <!--android:hint="@string/namerequired"-->
    <TextView
        style="@style/style_register_tv"
        android:text="@string/mail" />


    <EditText
        android:id="@+id/edt_email"
        style="@style/style_register_edt"
        android:inputType="textEmailAddress"

        />
    <!--android:hint="@string/mail"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <TextView
                style="@style/style_register_tv"
                android:text="@string/birthday" />


            <EditText
                android:id="@+id/edt_birthday"
                style="@style/style_register_edt" />

            <!--/>android:hint="@string/birthday"-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:orientation="vertical">

            <TextView
                style="@style/style_register_tv"
                android:text="@string/gender" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <EditText
                    android:id="@+id/tv_male"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"
                    android:focusable="false"
                    android:text="Male"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/tv_female"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:focusable="false"
                    android:gravity="center"
                    android:text="Female"
                    android:layout_height="match_parent" />


            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

    <TextView
        style="@style/style_register_tv"
        android:text="@string/invitecode"
        android:maxLength="20"/>


    <EditText
        android:id="@+id/edt_inviteCode"
        style="@style/style_register_edt"


        />
    <!--android:hint="@string/invitecode"-->

    <Button
        android:id="@+id/btnContinueRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_drawable"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/btnregister"
        android:textAllCaps="false"
        android:textColor="@color/colorMobile"
        android:textSize="15sp"

        />
</LinearLayout>
