<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/register"
            android:textColor="@color/colorActionbar"
            android:textSize="20sp" />

        <TextView
            style="@style/style_register_tv"
            android:text="@string/phone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/edt_country_code"
                style="@style/style_register_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="5dp"
                android:layout_weight=".20"
                android:focusable="false"
                android:padding="0dp"
                android:textColor="@android:color/transparent" />

            <EditText
                android:id="@+id/edt_phone"
                style="@style/style_register_edt"
                android:layout_width="0dp"
                android:layout_weight=".80"
                android:inputType="phone"
                android:maxLength="15" />

        </LinearLayout>
        <!--android:hint="@string/phonerequired" -->

        <TextView
            style="@style/style_register_tv"
            android:text="@string/name" />


        <EditText
            android:id="@+id/edt_name"
            style="@style/style_register_edt"
            android:inputType="text"

            />
        <!--android:hint="@string/namerequired"-->
        <TextView
            style="@style/style_register_tv"
            android:text="@string/mail" />


        <EditText
            android:id="@+id/edt_email"
            style="@style/style_register_edt"
            android:inputType="textEmailAddress"

            />
        <!--android:hint="@string/mail"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:orientation="vertical"
                android:paddingRight="10dp">

                <TextView
                    style="@style/style_register_tv"
                    android:text="@string/birthday" />


                <EditText
                    android:id="@+id/edt_birthday"
                    style="@style/style_register_edt" />

                <!--/>android:hint="@string/birthday"-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:orientation="vertical">

                <TextView
                    style="@style/style_register_tv"
                    android:text="@string/gender" />

                <LinearLayout
                    android:id="@+id/ll_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/tv_male"

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:focusable="false"
                        android:gravity="center"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="Male" />

                    <EditText
                        android:id="@+id/tv_female"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:focusable="false"
                        android:gravity="center"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="Female" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <TextView
            style="@style/style_register_tv"
            android:maxLength="20"
            android:text="@string/invitecode" />


        <EditText
            android:id="@+id/edt_inviteCode"
            style="@style/style_register_edt"


            />
        <!--android:hint="@string/invitecode"-->

        <Button
            android:id="@+id/btnContinueRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_drawable"
            android:drawableEnd="@drawable/arrow_small"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/arrow_small"
            android:gravity="center"
            android:paddingLeft="90dp"
            android:paddingRight="90dp"
            android:text="@string/btnregister"
            android:textAllCaps="false"
            android:textColor="@color/colorMobile"
            android:textSize="15sp"

            />
    </LinearLayout>
</ScrollView>