<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title_label"
        style="@style/TextStyleNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_corner_cyan_background"
        android:inputType="text"
        android:maxLines="2"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_label" />

    <TextView
        android:id="@+id/tv_description_label"
        style="@style/TextStyleNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_description"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_corner_cyan_background"
        android:maxLines="8"
        android:minLines="8"
        android:padding="8dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/btn_bg_enable"
        android:gravity="center"
        android:text="@string/txt_next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>